--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
-db_dsn = "mysql:dbname=timetrav_wireframer;host=127.0.0.1";
+db_dsn = "mysql:dbname=timetrav_wireframer";
 db_user = "root";
-db_pass = "";
+db_pass = "root";
 db_host = "localhost";
